allow manually triggering a ci workflow

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,6 +2,7 @@ name: ci
 on:
   push: {branches-ignore: [latest], tags: ['*']}
   pull_request:
+  workflow_dispatch:
 env:
   PACKAGE_NAME: ${{ github.event.repository.name }}
   PACKAGE_VERSION: ${{ github.sha }}
