--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,7 +2,7 @@ name: ci
 on:
   push: {branches-ignore: [latest], tags: ['*']}
   pull_request:
-  workflow_dispatch:
+  workflow_dispatch: # this allows manually triggering the workflow from github actions web interface
 env:
   PACKAGE_NAME: ${{ github.event.repository.name }}
   PACKAGE_VERSION: ${{ github.sha }}
