--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -255,6 +255,7 @@ jobs:
         install: >-
           msys2-devel
           mingw-w64-${{ matrix.arch }}-toolchain
+          mingw-w64-clang-${{ matrix.arch }}-toolchain
     - name: add cppfw pacman msys repo
       uses: myci-actions/add-pacman-repo@master
       with:
