--- a/conan/conanfile.py.in
+++ b/conan/conanfile.py.in
@@ -33,8 +33,8 @@ class R4Conan(ConanFile):
 # conan_basic_setup()''')
 
 	def build(self):
-		self.run("CONANBUILDINFO_DIR=$(pwd)/ make")
-		self.run("CONANBUILDINFO_DIR=$(pwd)/ make test")
+		self.run("CONANBUILDINFO_DIR=$(pwd)/ make lint=off")
+		self.run("CONANBUILDINFO_DIR=$(pwd)/ make test lint=off")
 
 	def package(self):
 		self.copy("*.h", dst="include", src="src")
