apply code formatting

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -38,6 +38,15 @@
                 "$gcc"
             ],
             "group": "build"
+        },
+        {
+            "label": "format",
+            "type": "shell",
+            "command": "make apply-format",
+            "problemMatcher": [
+                "$gcc"
+            ],
+            "group": "build"
         }
     ]
 }
