--- a/tests/unit/makefile
+++ b/tests/unit/makefile
@@ -1,8 +1,6 @@
 include prorab.mk
 include prorab-test.mk
 
-$(eval $(call prorab-try-simple-include, $(CONANBUILDINFO_DIR)conanbuildinfo.mak))
-
 this_name := r4_unit_tests
 
 this_srcs += $(call prorab-src-dir, src)
@@ -11,10 +9,7 @@ $(eval $(call prorab-config, ../../config))
 
 this_cxxflags += -I ../../src
 
-this_ldlibs += -ltst -lutki -lm $(addprefix -l,$(CONAN_LIBS))
-
-this_cxxflags += $(addprefix -I,$(CONAN_INCLUDE_DIRS))
-this_ldflags += $(addprefix -L,$(CONAN_LIB_DIRS))
+this_ldlibs += -ltst -lutki -lm
 
 this_no_install := true
 
@@ -22,5 +17,5 @@ $(eval $(prorab-build-app))
 
 this_test_cmd := $(prorab_this_name) --junit-out=out/$(c)/junit.xml --jobs=$(prorab_nproc)
 this_test_deps := $(prorab_this_name)
-this_test_ld_path := ../../src/out/$(c) $(CONAN_LIB_DIRS)
+this_test_ld_path := ../../src/out/$(c)
 $(eval $(prorab-test))
