--- a/msys2/PKGBUILD.in
+++ b/msys2/PKGBUILD.in
@@ -61,12 +61,12 @@ prepare() {
 
 build() {
 	cd "$rootDir"
-	make CXX=clang++
+	make
 }
 
 check() {
 	cd "$rootDir"
-	make test CXX=clang++
+	make test
 }
 
 package() {
