--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -50,8 +50,11 @@ jobs:
         run: myci-deb-install-build-deps.sh
       - name: build
         run: make config=gcov
+      - name: test
+        run: make config=gcov test
       - name: generate coverage report
-        run: gcovr --exclude-throw-branches --filter src/ --cobertura > cobertura.xml
+        # due to some bug in gcov, we need to use --gcov-ignore-parse-errors=negative_hits.warn
+        run: gcovr --gcov-ignore-parse-errors=negative_hits.warn --exclude-throw-branches --filter src/ --cobertura > cobertura.xml
       - name: upload coverage report to artifacts
         uses: actions/upload-artifact@v3
         with:
