--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -129,7 +129,7 @@ jobs:
           - {os: ubuntu, codename: jammy, image_owner: }
           # - {os: raspbian, codename: buster, image_owner: igagis/, labels: [arm,docker]}
           - {os: raspbian, codename: bullseye, image_owner: igagis/, labels: [arm,docker]}
-          - {os: raspbian, codename: bookworm, image_owner: igagis/, labels: [arm,docker]}
+          # - {os: raspbian, codename: bookworm, image_owner: igagis/, labels: [arm,docker]}
     runs-on: ${{ (matrix.labels == '' && 'ubuntu-latest') || matrix.labels }}
     container: ${{ matrix.image_owner }}${{ matrix.os }}:${{ matrix.codename }}
     name: linux - ${{ matrix.image_owner }}${{ matrix.os }}:${{ matrix.codename }}
