--- a/homebrew/libr4.rb.in
+++ b/homebrew/libr4.rb.in
@@ -12,10 +12,10 @@ class Libr4 < Formula
   # use gmake here because otherwise homebrew uses default Mac's make which is of too old version 3.81
   def install
     ENV['PATH'] += ':/usr/local/bin'
-    system "gmake", "install", "PREFIX=#{prefix}", "lint=off"
+    system "gmake", "--include-dir=$(brew --prefix)/include", "install", "PREFIX=#{prefix}", "lint=off"
   end
 
   test do
-    system "gmake", "test"
+    system "gmake", "--include-dir=$(brew --prefix)/include", "test"
   end
 end
