--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -47,11 +47,8 @@ jobs:
       - name: test
         run: make config=gcov test
       - name: generate coverage report
-        run: pipx run gcovr --exclude-throw-branches --filter src/ --cobertura > cobertura.xml
-      # TODO: remove
-      # - name: generate coverage report
-      #   # due to some bug in gcov, we need to use --gcov-ignore-parse-errors=negative_hits.warn
-      #   run: gcovr --gcov-ignore-parse-errors=negative_hits.warn --exclude-throw-branches --filter src/ --cobertura > cobertura.xml
+        # due to some bug in gcov, we need to use --gcov-ignore-parse-errors=negative_hits.warn
+        run: pipx run gcovr --gcov-ignore-parse-errors=negative_hits.warn --exclude-throw-branches --filter src/ --cobertura > cobertura.xml
       - name: upload coverage report to artifacts
         uses: actions/upload-artifact@v4
         with:
