--- a/vcpkg/test/CMakeLists.txt
+++ b/vcpkg/test/CMakeLists.txt
@@ -5,6 +5,7 @@ set(CMAKE_TOOLCHAIN_FILE $ENV{VCPKG_ROOT}/scripts/buildsystems/vcpkg.cmake)
 project(test)
 
 find_package(r4 CONFIG REQUIRED)
+find_package(utki CONFIG REQUIRED)
 
 add_executable(test main.cpp)
 
