mode build stuff to build dir

--- a/src/makefile
+++ b/src/makefile
@@ -2,16 +2,17 @@ include prorab.mk
 include prorab-license.mk
 include prorab-clang-format.mk
 
-this_name := r4
+$(eval $(call prorab-config, ../config))
+
+this_src_dir := r4
+
+this_name := $(this_src_dir)$(this_dbg)
 
 this_soname := 0
-
-$(eval $(call prorab-config, ../config))
 
 $(eval $(prorab-build-lib))
 
 $(eval $(prorab-clang-format))
 
-this_src_dir := $(this_name)
 this_license_file := ../LICENSE
 $(eval $(prorab-license))
