--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -22,18 +22,18 @@
             "group": "build"
 		},
 		{
-            "label": "test_clang++_debug",
+            "label": "test_clang++-dev",
             "type": "shell",
-            "command": "make test CXX=clang++ config=dbg",
+            "command": "make test CXX=clang++ config=dev",
             "problemMatcher": [
                 "$gcc"
             ],
             "group": "build"
         },
         {
-            "label": "test_g++_debug",
+            "label": "test_g++-dev",
             "type": "shell",
-            "command": "make test CXX=g++ config=dbg",
+            "command": "make test CXX=g++ config=dev",
             "problemMatcher": [
                 "$gcc"
             ],
@@ -42,7 +42,7 @@
         {
             "label": "format",
             "type": "shell",
-            "command": "make apply-format",
+            "command": "make format",
             "problemMatcher": [
                 "$gcc"
             ],
