--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -418,12 +418,15 @@ jobs:
       - name: prepare vcpkg port
         run: |
           myci-vcpkg-prepare.sh --git-ref ${{ github.sha }}
-      - name: test vcpkg port
+      - name: test vcpkg port - build
         run: |
           cd build/vcpkg/test
           cmake .
-          make
-          ./test
+          cmake --build . --parallel
+      - name: test vcpkg port - test
+        run: |
+          cd build/vcpkg/test
+          cmake --build . --target test
       - name: upload vcpkg logs to artifacts
         if: always() # even if previous steps fail, this one needs to be run
         uses: actions/upload-artifact@v4
